--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
+  "java.configuration.updateBuildConfiguration": "automatic",
   "java.compile.nullAnalysis.mode": "automatic",
-  "java.configuration.updateBuildConfiguration": "interactive"
+  "files.exclude": {
+    "**/target": true,
+    "**/node_modules": true
+  },
+  "java.project.sourcePaths": [
+    "promotion-system/src/main/java"
+  ],
+  "java.project.outputPath": "promotion-system/target/classes"
 }
