--- a/promotion-system/src/main/resources/application.properties
+++ b/promotion-system/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/promotion_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=YOUR_PASSWORD_HERE
+spring.datasource.password=Mihindu#123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
