--- a/promotion-system/src/main/resources/application.properties.template
+++ b/promotion-system/src/main/resources/application.properties.template
@@ -1,3 +1,5 @@
+#Template for application.properties
+
 # Promotion System - application.properties template
 # Copy this file to `application.properties` and replace placeholders with your secrets.
 # Do NOT commit the generated `application.properties` file; it is ignored by git.
